--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,27 @@
     <build>
         <plugins>
             <plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-dependency-plugin</artifactId>
+    				<version>2.3</version>
+    			<executions>
+        			<execution>
+            			<phase>package</phase>
+            				<goals><goal>copy</goal></goals>
+            		<configuration>
+                <artifactItems>
+                    <artifactItem>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-runner</artifactId>
+                        <version>7.4.5.v20110725</version>
+                        <destFileName>jetty-runner.jar</destFileName>
+                    		</artifactItem>
+                		</artifactItems>
+            		</configuration>
+        			</execution>
+    			</executions>
+			</plugin>
+            <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
@@ -153,6 +174,7 @@
                     <mainClass>org.test.int1.Main</mainClass>
                 </configuration>
             </plugin>
+            
         </plugins>
     </build>
 </project>
